samples/_failures_safe/1761356476_f051f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_058e60ae.c: In function ‘main’:
./samples/SAFE/__tmp_058e60ae.c:161:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  161 |     size_t len
      |     ^~~~~~
./samples/SAFE/__tmp_058e60ae.c:161:5: error: expected declaration or statement at end of input
